syntax = "proto3";

package vuong.app.v1.discord;
option java_package = "com.vuong.app.v1.discord";
option java_multiple_files = true;
option java_outer_classname = "DomanProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
import "operator.proto";
import "discord/doman.proto";

enum GrpcMemberRole {
  MEMBER_ROLE_UNSPECIFIED = 0;
  MEMBER_ROLE_ADMIN = 1;
  MEMBER_ROLE_MODERATOR = 2;
  MEMBER_ROLE_GUEST = 3;
}

enum GrpcChannelType {
  CHANNEL_TYPE_UNSPECIFIED = 0;
  CHANNEL_TYPE_TEXT = 1;
  CHANNEL_TYPE_AUDIO = 2;
  CHANNEL_TYPE_VIDEO = 3;
}
